--- a/src/components/Contact/ContactCom.scss
+++ b/src/components/Contact/ContactCom.scss
@@ -353,29 +353,16 @@
     &.loading {
       position: relative;
       overflow: hidden;
-
-      &:after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        border: 2px solid #007bff;
-        border-top-color: transparent;
-        animation: spin 1s linear infinite;
-      }
     }
 
     .loader {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 40px;
-      height: 40px;
+   
+      top: 20%;
+      left: 80%;
+      // transform: translate(-50%, -50%);
+      width: 20px;
+      height: 20px;
       border: 4px solid #fff;
       border-top: 4px solid #007bff;
       border-radius: 50%;
@@ -441,18 +428,17 @@
       }
 
       &:nth-child(3) {
-        //instagram
-        background: $instagram;
+        //whatsapp
+        background: $whatsapp;
       }
 
       &:nth-child(4) {
-        //whatsapp
-        background-color: $whatsapp;
-      }
-
-      &:nth-child(5) {
-        //leetCode
+        //leetcode
         background-color: $black-1000;
+      }
+      &:nth-child(5) {
+        //gfg
+        background-color: #36914C;
       }
 
       &:hover {
