--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -3,32 +3,29 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Rubik&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css?  family=Lora:400,400i,700,700i");
+
 .home_cls {
     // background-color: $bg-light;
     background-color: #fff7ee;
+    // min-height: 100vh;
+    --bkg: #5eb3fd;
+    --white: #e7e6e6;
     // background-color: red;
-    
+
     // min-height: 100vh;
     // z-index: 1;
     overflow: hidden;
-    // position: relative;
+    position: relative;
     color: black;
 
-    .home_cntr
-    {
+    .home_cntr {
         //  background-color: red;
         //  position: relative;
         //  overflow: hidden;
     }
-}
-
-.theme_tgl {
-    // background-color: red;
-    position: fixed;
-    right: 30px;
-    top: 60px;
-    z-index: 999;
 }
 
 .home_cls .row {
@@ -54,7 +51,7 @@
     h3 {
         color: #686858;
         margin-bottom: 16px;
-        font-size: 20px;
+        font-size: 23px;
         font-weight: 600;
         // font-family: 'sans-serif';
         // font-family: 'Courier New', Courier, monospace;
@@ -62,34 +59,94 @@
 
         span {
             font-size: 35px;
+            padding: 5px;
             animation: wave-animation 2s infinite;
             transform-origin: 70% 70%;
             display: inline-block;
         }
     }
 
-    h1 {
-        font-size: 4rem;
-        margin-bottom: 30px;
-        font-weight: 700;
-        // font-family:'PT Sans';
-        // font-family: "Poppins";
-        //   font-family: Nunito,monospac;
-        // font-family: Graphik, sans-serif;
-        font-family: 'rubi';
+    .my-name {
+        width: 100vw;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
 
-        
-    
-        text-transform: uppercase;
+        .title1 {
+            align-items: center;
+
+            h1 {
+                font-size: 5rem;
+                font-weight: 900;
+                font-family: "Montserrat", sans-serif;
+                color: black;
+            }
+        }
+
+        .ghost {
+            width: 2rem;
+            height: 3rem;
+            background-color: var(--white);
+            background-image: radial-gradient(ellipse at 35% 40%, #000 8%, transparent 0%),
+                radial-gradient(ellipse at 65% 40%, #000 8%, transparent 0%),
+                radial-gradient(ellipse at 50% 60%, #000 8%, transparent 0%);
+            border-radius: 100% / 70% 70% 0% 0%;
+            transform: translateX(1100em) rotateZ(-90deg);
+            position: relative;
+            opacity: 0.9;
+            mix-blend-mode: exclusion;
+            animation: ghostMove 4s ease-out infinite;
+
+            div {
+                position: absolute;
+                width: 20%;
+                background-color: var(--white);
+                background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
+                &:nth-of-type(1) {
+                    height: 7vmin;
+                    left: 0;
+                    bottom: -6vmin;
+                    border-radius: 100% / 0% 0% 50% 50%;
+                }
+                &:nth-of-type(2),
+                &:nth-of-type(4) {
+                    height: 4vmin;
+                    left: 20%;
+                    bottom: -3vmin;
+                    border-radius: 100% / 50% 50% 0% 0%;
+                    background-color: transparent;
+                }
+                &:nth-of-type(3) {
+                    height: 4vmin;
+                    left: 40%;
+                    bottom: -3.95vmin;
+                    border-radius: 100% / 0% 0% 60% 60%;
+                    background-color: var(--white);
+                }
+                &:nth-of-type(4) {
+                    left: 60%;
+                }
+                &:nth-of-type(5) {
+                    height: 3vmin;
+                    left: 80%;
+                    bottom: -2.9vmin;
+                    border-radius: 100% / 0% 0% 70% 70%;
+                    background-color: var(--white);
+                }
+            }
+        }
     }
 
     h2 {
         // color: #000000a7;
-
+        // background-color: red;
+        margin-top: 30px;
         margin-bottom: 60px;
-        font-size: 1.5rem;
-        font-weight: 600;
+        font-size: 1.3rem;
+        font-weight: 700;
         line-height: 2rem;
+        text-transform: capitalize;
 
         // span1,
         // span2 {
@@ -115,11 +172,11 @@
 
         span {
             // background-color: red;
-           
+
             img {
                 height: 15px;
                 width: 15px;
-                 vertical-align:middle;
+                vertical-align: middle;
                 animation: rotation 5s infinite linear;
                 // animation: wave-animation 2s infinite;
                 // color: #fa8000;
@@ -152,6 +209,7 @@
                 height: 100%;
                 width: 100%;
                 margin-bottom: -1em;
+                animation: lineAnimation 0.7s ease-in-out 0s both;
             }
         }
     }
@@ -233,91 +291,12 @@
         transform: rotate(0deg);
     }
 }
-
-.curve_bg_cntnr {
-    // // overflow: hidden;
-    background-color: rgba(0, 255, 47, 0.065);
-    z-index: 1;
-    min-height: 34vw;
-    justify-content: center;
-    align-items: baseline;
-    position: absolute;
-    top: 85vh;
-    
-    bottom: auto;
-    left: 0%;
-    right: 0%;
-
-    .curve_bg_text {
-        // background-color: red;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        display: flex;
-        position: absolute;
-        top: 0%;
-        bottom: 0%;
-        left: 0%;
-        right: 0%;
-
-        p {
-            line-height: 2.5rem;
-            font-size: 1.2rem;
-            font-weight: 900;
-            padding: 10px 130px;
-            color: rgb(255, 255, 255);
-
-            span {
-                color: $accent-color;
-                font-weight: 900;
-            }
-
-            img {
-                width: 50px;
-                height: 50px;
-                // background-color: red;
-                // margin-top: -10px;
-                margin-bottom: -15px;
-
-                padding: 3px;
-            }
-            box1 {
-                // font-size: 44px;
-                // border: 2px  black;
-            }
-            box2 {
-                // font-size: 44px;
-            }
-            box3 {
-                // font-size: 44px;
-            }
-        }
+@keyframes lineAnimation {
+    0% {
+        transform: scaleX(0); /* Start with no width */
     }
-
-    .curve_bg_img {
-        z-index: 2;
-        width: 100%;
-        height: 100%;
-        background-image: url("/assets/curve_bg.svg");
-
-        // background-position: 50%;
-        background-size: cover;
-        object-fit: scale-down;
-        background-repeat: no-repeat;
-        position: absolute;
-
-        top: 30%;
-        bottom: auto;
-        left: 0;
-        right: auto;
-   
-      
-        top: 7%;
-        bottom: auto;
-        left: 0%;
-        right: auto;
+    100% {
+        transform: scaleX(1); /* End with full width */
     }
 }
 
@@ -335,50 +314,28 @@
     right: 90px;
     height: 30px;
     width: 30px;
-    animation: wave-animation 2s infinite;
+    animation: rotation 2s infinite;
 }
-.curl_brac1 {
-    position: absolute;
-    top: 10px;
-}
-.curl_brac2 {
-    position: absolute;
-    top: 60vh;
-    right: 10px;
-}
+
 .curl_Arrow {
     position: absolute;
-    top: 68vh;
+    top: 60vh;
     left: -20px;
     height: 270px;
     width: 140px;
+    z-index: 9;
 }
 
-// .quote_box {
-//     position: absolute;
-//     bottom: calc(100% - 90vh);
-//     left: 50px;
-//     padding: 10px;
-//     z-index: 5;
-//     // padding-bottom: 60px;
-
-//     p {
-//         font-size: 0.9rem;
-//         font-weight: 400;
-//     }
-// }
-
-@media (max-width:850px)
-{
+@media (max-width: 850px) {
     // .star_icon1, .star_icon2,.curl_brac1,.curl_brac2,.curl_Arrow{
     //    display: none;
     // }
-   
 }
-@media (max-width:550px)
-{
-    .star_icon1, .star_icon2,.curl_brac1,.curl_brac2,.curl_Arrow{
-       display: none;
+@media (max-width: 550px) {
+    .star_icon1,
+    .star_icon2,
+    .curl_Arrow {
+        display: none;
     }
 
     .home_txt {
@@ -393,7 +350,7 @@
         padding-top: 90px;
         // background-color: red;
         // line-height: 3rem;
-    
+
         h3 {
             color: #686858;
             margin-bottom: 16px;
@@ -402,36 +359,70 @@
             // font-family: 'sans-serif';
             // font-family: 'Courier New', Courier, monospace;
             // line-height: 140%;
-    
+
             span {
-                font-size: 35px;
+                padding: 2px;
+                font-size: 23px;
                 animation: wave-animation 2s infinite;
                 transform-origin: 70% 70%;
                 display: inline-block;
             }
         }
-    
+
+        .my-name {
+            .title1 {
+                h1 {
+                    font-size: 3rem;
+                }
+            }
+
+            .ghost {
+                margin-top: 45px;
+                width: 2rem;
+                height: 2rem;
+
+                animation: ghostMove 7s ease-out infinite;
+            }
+        }
+
         h1 {
             font-size: 3.3rem;
         }
-    
-        h2 {
 
+        h2 {
             font-size: 1.2rem;
         }
-    
+
         h4 {
-           margin-top: 20px;
+            margin-top: 20px;
         }
     }
-   
 }
 
 @keyframes rotation {
     from {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
     to {
-      transform: rotate(359deg);
+        transform: rotate(359deg);
     }
-  }
+}
+
+.wave {
+    display: block;
+    position: relative;
+    height: 200px;
+    width: 100%;
+    background-color: white;
+
+    // background-color: red;
+}
+
+@keyframes ghostMove {
+    0% {
+        transform: translateX(35em) rotateZ(-90deg);
+    }
+    100% {
+        transform: translateX(-90em) rotateZ(-90deg);
+    }
+}
