--- a/src/index.scss
+++ b/src/index.scss
@@ -195,7 +195,7 @@ button {
   &:hover {
     box-shadow: $card-box-shadow-high;
     transform: translate(-6px, -6px);
-    background-color: $accent-color;
+    // background-color: $accent-color;
   }
 }
 /* Responsive card */
