--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -4,6 +4,8 @@
 
 .about_cls {
   // background-color: $bg-main;
+
+  margin-top: -100px;
   background-color: $white-1000;
   // min-height: 150vh;
   color: black;
@@ -25,24 +27,78 @@
   flex: 40%;
 
   .img_box {
-    position: relative;
-    overflow: hidden;
-    padding: 10px;
-    position: relative;
-    border-radius: 200px 20px;
-    // background-color: $accent-color;
-    background-color: $black-800;
+    // position: relative;
+    // overflow: hidden;
+    // // padding: 10px 0px;
+    // position: relative;
+    // border-radius: 80px;
+    // // background-color: $accent-color;
+    // background-color: rgb(0, 0, 0);
+
     // border: 5px solid black;
-    // width: 450px;/
+    // position: relative;
+
+    z-index: 0;
+    // width: 400px;
+    // height: 300px;
+    border-radius: 90px;
+    overflow: hidden;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
+
+    &::before {
+      content: "";
+      position: absolute;
+      z-index: -2;
+      left: -50%;
+      top: -50%;
+      width: 200%;
+      height: 200%;
+      background-color: #ffffff;
+      background-repeat: no-repeat;
+      background-size:
+        50% 50%,
+        50% 50%;
+      background-position:
+        0 0,
+        100% 0,
+        100% 100%,
+        0 100%;
+      background-image: linear-gradient(#eef0ef, #f3850f), linear-gradient(#fbb300, #f7cb45);
+      animation: rotate 4s linear infinite;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      left: 6px;
+      top: 6px;
+      width: calc(100% - 12px);
+      height: calc(100% - 12px);
+      background: white;
+      border-radius: 90px;
+    }
+    // width: 450px;
 
     img {
       // width: 300px;
       position: relative;
       width: 320px;
-      height: 380px;
+      height: 420px;
       z-index: 1;
       vertical-align: middle;
+      border-radius: 90px;
     }
+  }
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
   }
 }
 
@@ -50,8 +106,7 @@
 .about_box {
   z-index: 1;
 
-  .abt_txt
-  {
+  .abt_txt {
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.2;
@@ -59,7 +114,7 @@
   }
   .about_content {
     // background-color: red;
-    
+
     padding: 20px;
     display: grid;
     gap: 3rem;
@@ -67,30 +122,65 @@
     grid-template-columns: auto auto;
     grid-template-columns: 1fr 1fr;
     overflow: hidden;
-    
-    
+
     .card2 {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      padding: 10px;
+      border-radius: 10px;
+
+      position: relative;
+
+      &::before {
+        transform: scaleX(0);
+        transform-origin: bottom right;
+      }
+
+      &::before {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        inset: 0 0 0 0;
+        padding: 5px;
+        border: $bor-1;
+        box-shadow: $card-box-shadow-low;
+        border-radius: $br-10;
+        background: hsl(200 100% 80%);
+        z-index: -1;
+        border-radius: 10px;
+
+        transition: transform 0.5s ease;
+      }
 
       .abt_logo {
         color: $accent-color;
-        font-size: 30px;
+        font-size: 35px;
+        transition: transform 0.5s ease;
       }
 
       h3 {
         font-size: 1.3rem;
         font-weight: 600;
         margin-bottom: 10px;
+        transition: transform 0.5s ease;
       }
 
-      p 
-      {
+      p {
         text-align: center;
-        font-size: 13px;
+        font-size: 13.5px;
+        transition: transform 0.5s ease;
+      }
+
+      &:hover::before {
+        transform: scaleX(1);
+        transform-origin: bottom left;
       }
     }
   }
@@ -114,6 +204,14 @@ n ends #######------------------- */
 }
 
 @media (max-width: 550px) {
+
+  .about_cls {
+    // background-color: $bg-main;
+  
+    margin-top: -190px;
+
+  }
+  
   .about_img {
     .img_box {
       padding: 10px 5px;
