--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,6 +5,7 @@
     z-index: 999;
     width: 100%;
     padding: 8px 25px;
+    padding-left: 1px;
     margin: 0 auto;
     background: $bg-light;
     color: black;
@@ -108,8 +109,8 @@
 }
 
 .sticky {
-    padding-top: 5px;
-    padding: 1px 15px;
+    // padding-top: 8px;
+    padding: 2px 15px;
     box-shadow: 0 0.5px 0.5px rgba(0, 0, 0, 0.3);
     
     opacity: 1;
@@ -142,6 +143,7 @@
     .navbar {
         // background-color: red;
         padding: 3px 17px;
+        padding-left: 1px;
 
         ul {
             li {
@@ -178,7 +180,7 @@
             border-bottom: 2px solid #282825;
             padding: 10px 20px;
             z-index: -5;
-            // text-align: center;
+            text-align: center;
             min-width: 300px;
             position: absolute;
             top: -40vh;
