--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -53,7 +53,7 @@
         margin-bottom: 16px;
         font-size: 23px;
         font-weight: 600;
-        // background-color: #5eb3fd;
+        background-color: #5eb3fd;
         // font-family: 'sans-serif';
         // font-family: 'Courier New', Courier, monospace;
         // line-height: 140%;
