--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -6,12 +6,11 @@
   color: rgb(255, 255, 255);
   // min-height: 200vh;
   z-index: 1;
-  
+
   background-color: #000;
   position: relative;
   overflow: hidden;
 }
-
 
 .proj_curls {
   width: 6rem;
@@ -22,8 +21,6 @@
   left: 0%;
   right: auto;
 }
-
-
 
 .port_bg {
   // display: none;
@@ -88,12 +85,12 @@
         // display: inline-block;
 
         width: 100%;
-        height: 300px;
+        height: 280px;
 
         // overflow-clip-margin: content-box;
         // overflow: clip;
 
-        max-width: 100%;
+      
         vertical-align: middle;
         // display: inline-block;
 
@@ -111,9 +108,9 @@
         transition: transform 0.4s ease 0s;
         overflow: hidden;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+        // justify-content: center;
+        // align-items: center;
+        // text-align: center;
 
         p {
           position: absolute;
@@ -123,37 +120,25 @@
           line-height: 1.6rem;
           color: #fff;
           font-family: Sans-serif;
+          white-space: pre-line;
         }
       }
 
-      // .know_icon {
-      //   position: absolute;
-      //   font-size: 20px;
-      //   top: 10px;
-      //   left:auto;
-      //   right: 10px;
-      //   // bottom: 0;
-      //   // transform: scale(1.5);
-      //   background-color: red;
-
-      //   opacity: 1;
-      //   transition: transform 0.4s ease 0s;
-      //   overflow: hidden;
-
-      //   z-index: 44;
-      // }
+   
     }
 
     .proj_content {
+      
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.5rem;
+      padding: 0.1rem 0.2rem;
       overflow: hidden;
       position: relative;
 
       // box-sizing: border-box;
       .proj_text {
+ 
         padding: 0.5rem;
         overflow: hidden;
         .proj_title {
@@ -170,7 +155,7 @@
         }
         .proj_sub-title {
           p {
-            font-size: 1rem;
+            font-size: .9rem;
             margin-top: 10px;
             font-weight: 400;
             // transition: all 0.3s ease-in-out;
@@ -178,28 +163,32 @@
         }
       }
       .proj_links {
+  
+        display: flex;
+        // flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        gap: 20px;
+        padding: 3px;
         transition: all 0.3s ease-in-out;
 
-        .gfg
-        {
-          
-          font-size: 2.5rem;
-        
-          text-align: center;
-          align-items: center;
-   
+        .gfg {
+          font-size: 2.2rem;
+          // text-align: center;
+          // align-items: center;
         }
+       
         a {
           color: $white-1000;
           display: inline-block;
           align-items: center;
           font-size: 2rem;
-          margin: 10px;
-           font-weight: 900;
+          // margin: 10px;
+          
+          font-weight: 900;
           //  background-color: red;
           transition: all 0.3s ease-in-out;
 
-        
           &:hover {
             transform: scale(1.1);
           }
@@ -249,35 +238,29 @@
       }
     }
     .proj_links {
-      .leetcode
-      {
+      .leetcode {
         transform: none;
       }
       a:nth-child(1) {
-
         transform: rotate(-45deg);
       }
-      
     }
   }
 }
 
-.more
-{
+.more {
   margin-top: 15px;
   display: flex;
   justify-content: center;
-cursor:pointer;
+  cursor: pointer;
   font-size: 22px;
   font-weight: 600;
   transition: all 0.4s ease-in-out;
 
-  &:hover
-  {
+  &:hover {
     text-decoration: underline;
   }
 }
-
 
 @media (max-width: 991px) {
   .proj_card_comp {
@@ -315,7 +298,109 @@ cursor:pointer;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 400px) {
+  .proj_card_comp {
+   
+    .card1 {
+  
+      .proj_img {
+  
+        .proj_details {
+      
+          p {
+            position: absolute;
+            padding: 30px;
+            font-weight: bold;
+            font-size: 1rem;
+            line-height: 1.6rem;
+            color: #fff;
+            font-family: Sans-serif;
+          
+          }
+        }
+  
+      }
+  
+      .proj_content {
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.2rem;
+        overflow: hidden;
+        position: relative;
+  
+        // box-sizing: border-box;
+        .proj_text {
+         
+          padding: 0.5rem;
+          overflow: hidden;
+          .proj_title {
+            h3 {
+              font-size: 1.5rem;
+              font-weight: 600;
+              line-height: 1.2;
+  
+              border-bottom: 3px solid transparent;
+              display: inline-block;
+  
+              transition: all 0.3s ease-in-out;
+            }
+          }
+          .proj_sub-title {
+            p {
+              font-size: 1rem;
+              margin-top: 10px;
+              font-weight: 400;
+              // transition: all 0.3s ease-in-out;
+            }
+          }
+        }
+        .proj_links {
+          // background-color: blue;
+          display: flex;
+         flex-direction: column;
+         gap:5px;
+    
+          justify-content: center;
+          text-align: center;
+          transition: all 0.3s ease-in-out;
+  
+          .gfg {
+            font-size: 2.2rem;
+            // text-align: center;
+            // align-items: center;
+          }
+          a {
+            color: $white-1000;
+            display: inline-block;
+            align-items: center;
+            font-size: 2rem;
+            // margin: 10px;
+            font-weight: 900;
+            //  background-color: red;
+            transition: all 0.3s ease-in-out;
+  
+            &:hover {
+              transform: scale(1.1);
+            }
+  
+            &:active {
+              transform: scale(0.7);
+            }
+  
+            &:nth-child(1):hover {
+              transform: scale(1.1) rotate(-45deg);
+            }
+            &:nth-child(1):active {
+              transform: scale(0.7) rotate(0deg);
+            }
+          }
+        }
+      }
+    }
+  }
+  
 }
 /* ?------------------- filter button  -e -------------------- */
 
@@ -493,7 +578,6 @@ cursor:pointer;
 //   }
 // }
 
-
 main {
   background: #111;
   border: solid 1px #222;
@@ -514,10 +598,4 @@ img {
   max-width: 100%;
 }
 
-
-
-
-
-
 /* --------------------------------- */
-
