--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,6 +2,10 @@
 
 .navbar {
     position: fixed;
+    max-width: 1980px;
+  
+
+    // max-width: 1380px;
     z-index: 999;
     width: 100%;
     padding: 8px 25px;
@@ -14,10 +18,8 @@
         display: flex;
         align-items: center;
         transition: all 1s ease-out;
-       
 
-        img
-        {
+        img {
             height: 70px;
             width: 100px;
             transition: all 0.6s ease-out;
@@ -100,8 +102,6 @@
                 &.active_Sec {
                     color: $accent-color;
                     text-decoration: underline;
-              
-                    
                 }
             }
         }
@@ -112,7 +112,7 @@
     // padding-top: 8px;
     padding: 2px 15px;
     box-shadow: 0 0.5px 0.5px rgba(0, 0, 0, 0.3);
-    
+
     opacity: 1;
 
     transition: all 0.6s ease-out;
@@ -122,10 +122,8 @@
         display: flex;
         align-items: center;
         // background-color: red;
-        
-       
-        img
-        {
+
+        img {
             height: 40px;
             width: 60px;
         }
@@ -183,7 +181,7 @@
             text-align: center;
             min-width: 300px;
             position: absolute;
-            top: -40vh;
+            top: -140vh;
             left: 0;
             right: 0;
             overflow: visible;
