--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -5,7 +5,7 @@
 .about_cls {
   // background-color: $bg-main;
 
-  margin-top: -100px;
+  margin-top: -60px;
   background-color: $white-1000;
   // min-height: 150vh;
   color: black;
@@ -14,6 +14,11 @@
 
 .about_box {
   flex: 60%;
+}
+
+.about-title {
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 /*? ------------About_img -s --------------- */
@@ -129,7 +134,8 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 10px;
+      padding: 40px 20px;
+
       border-radius: 10px;
 
       position: relative;
@@ -204,14 +210,12 @@ n ends #######------------------- */
 }
 
 @media (max-width: 550px) {
-
   .about_cls {
     // background-color: $bg-main;
-  
-    margin-top: -190px;
 
+    margin-top: -190px;
   }
-  
+
   .about_img {
     .img_box {
       padding: 10px 5px;
